# yajiang-aef

./: .gitignore  CLAUDE.md  README.md  fusion_result.json  pyproject.toml
configs/: yajiang_v0_2_a.yaml  yajiang_v0_2_c.yaml  yajiang_v0_3_a.yaml  yajiang_v0_3_c.yaml  yajiang_v1.yaml  yajiang_v1_1.yaml  yajiang_v1_example.yaml
docs/: roadmap.md
docs/data/: dataset_protocol.md
docs/experiments/: demo_server.md  evaluation_protocol.md  v0.2.md  v0.3a.md  v0.3c.md
docs/reference/: 2507.22291v2_analysis.md  项目问题总结报告_20260518(1).md
scripts/: build_debug_small_manifest.py  build_full_manifest.py  build_manifest.py  check_embedding_health.py  demo_visualize.py  eval_baselines.py  evaluate_model_suite.py  prepare_debug_small_npy.py  prepare_full_npy.py  prepare_jrc_water_npy.py  prepare_landsat_npy.py  proxy_7890.sh  run_demo_server.sh  run_eval_suite_v0_3_c.sh  run_v0_2_a.sh  run_v0_2_c.sh  run_v0_3_a.sh  run_v0_3_c.sh  run_v1_1.sh  serve_demo.py  train.py  train_with_manifest.py
src/: config.py
src/data/: dataset.py  manifest.py
src/eval/: __init__.py  baselines.py  features.py  metrics.py  sampling.py
src/models/: __init__.py  blocks.py  bottleneck.py  decoders.py  model.py  sensor_encoders.py  time_encoding.py
src/training/: losses.py  trainer.py
src/utils/: device.py  distributed.py
