[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yajiang-aef"
version = "0.1.0"
description = "Initial AlphaEarth-style multimodal spatiotemporal embedding framework for Yajiang"
authors = [
  {name = "hyh"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "scikit-learn",
  "opencv-python",
  "matplotlib",
  "rasterio"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
